[FIX] mrp_workorder{,_hr}: usable employee login on mobile
Steps to reproduce
==================

- Use a mobile sized viewport / mobile device
- Go to Manufacturing
- Click on a computer icon next to the "Plan Orders" button
- Click on the dropdown arrow
- Click on "Log In"

-> A popup should appear but nothing happens

Cause of the issue
==================

The popups are placed after the Kanban/List viewbuttons.
On mobile, this is a collapsed section.

Solution
========

For dialogs, there is a `useService("dialog")` designed to handle those
usecases. In order to use the service, the component need to be inside a
`<Dialog/>` component. For that, we can create a DialogWrapper component.
We then edit the `useConnectedEmployee` hook to use the dialog service.
With that, we need to pass the props directly. They are taken from the
previous template.

opw-3418639

closes odoo/enterprise#44119

X-original-commit: ac3ecd4b42e067cd8b3e15949a66696e7ed421e2

--- a/mrp_workorder/static/src/components/popup.scss
+++ b/mrp_workorder/static/src/components/popup.scss
@@ -1,26 +1,27 @@
 $wo-border-separation: $border-width solid $border-color;
 
 .o_tablet_popups {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    background-color: rgba(60, 60, 60, 0.4);
 
     &.o_unblock {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
         z-index: 100;
+        background-color: rgba(60, 60, 60, 0.4);
+
+        .popup {
+            z-index: 1200;
+            top: 5%;
+            left: 20%;
+            width: 60%;
+            position: fixed;
+            background: $o-gray-100;
+        }
     }
 
     .popup {
-        z-index: 1200;
-        top: 5%;
-        left: 20%;
-        width: 60%;
-        position: fixed;
-        background: $o-gray-100;
-
         .body.traceback {
             height: 238px;
             overflow: auto;
